# dne_research

./: .gitignore  .gitmodules  CMakeLists.txt  test.json
setup/: nedo.bash  sample.bash
src/: BMP.cpp  BMP.h  binary.cpp  binary.h  dataset_loader.cpp  dataset_loader.h  dataset_repo.cpp  dataset_repo.h  dne.h  experiment_dne.h  loader.h  logging.h  main.cpp  old.cpp  original_dne.h  param.cpp  param.h  propose_dne.h  propose_dne2.h  randomized_svd.h  real_dne.h
src/model/: original_dne.h  params.h  raw_dne.h  raw_semi_dne.h  raw_svd_dne.h  real_dne.h
test/: binary.cpp  data_repo.cpp  json.cpp  main.cpp  sample.cpp  save.cpp  youtube.cpp
